--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/1_app/main.tsx"></script>
   </body>
 </html>
